# node-ink

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  skills-lock.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.agents/: manifest.json
.github/workflows/: ci.yml
apps/playground/: index.html  package.json  tsconfig.json  vanilla.html  vite.config.ts  vue.html
crates/nodeink-core/: Cargo.toml
crates/nodeink-wasm/: Cargo.toml
docs/: .state.md  .todo.md  README.md  project-structure.md
docs/architecture/: technical-architecture.md
docs/benchmarks/: phase0-s1-pointer.json  phase0-s10-diagram-operation.json  phase0-s11-host-lifecycle.json  phase0-s12-toolchain.json  phase0-s2-stroke.json  phase0-s3-sketch.json  phase0-s4-text-ime.json  phase0-s5-scene-patch.json  phase0-s6-svg-scale.json  phase0-s7-indexeddb.json  phase0-s8-migration.json  phase0-s9-web-locks.json
docs/decisions/: open-questions.md
docs/planning/: phase-plan.md  phase0-vertical-slice.md  phase1a-camera-viewport.md  phase1a-freehand-tool.md  phase1a-persistence-recovery.md  phase1a-product-text.md  phase1a-selection-tool.md  phase1a-style-profile.md  phase1b-basic-shapes.md  phase1b-curved-path-editing.md  phase1b-editor-foundation.md  phase1b-element-size.md  phase1b-lease-takeover.md  phase1b-shape-creation.md  phase1b-shape-vertex-editing.md  phase1b-text-resize-accessibility.md
docs/product/: product-spec.md
scripts/: build-wasm.sh  check-framework-boundaries.sh  check-rust.sh  coverage-rust.sh
(+33 files in other folders)
