[workspace]
members = ["crates/nodeink-core", "crates/nodeink-wasm"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.96"
version = "0.0.0"

[workspace.dependencies]
nodeink-core = { path = "crates/nodeink-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
wasm-bindgen = "=0.2.126"
